--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.3.3",
+    "redis": "^4.7.0",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.23.8"
